Add build scripts, debugging tools, and SEO analysis for YouTube Downloader
- Implemented build.sh for automated deployment preparation, including FFmpeg installation and Python dependencies.
- Created debug_quality.py to check available video qualities for YouTube URLs.
- Added deploy_prep.bat for Windows deployment preparation with Git integration.
- Developed format_inspector.py to analyze available formats for YouTube videos.
- Introduced format_selector.py for dynamic format selection based on quality and FFmpeg availability.
- Built seo_analyzer.py to analyze SEO performance of deployed sites.
- Added start.bat and start_with_ffmpeg.bat for starting the application with environment setup.
- Implemented test scripts (test_ffmpeg_format.py, test_format_selection.py, test_formats.py, test_progress.py) to validate format selection and progress tracking.

--- a/.gitignore
+++ b/.gitignore
@@ -138,3 +138,14 @@ Thumbs.db
 
 # Railway
 .railway/
+
+# README files (except main README.md)
+DEPLOYMENT_GUIDE.md
+MARKETING_GUIDE.md
+DEPLOYMENT_SUCCESS.md
+RENDER_DEPLOYMENT.md
+FREE_HOSTING_COMPARISON.md
+*_GUIDE.md
+*_README.md
+readme.txt
+README.txt
