--- a/render.yaml
+++ b/render.yaml
@@ -7,8 +7,8 @@ services:
   - type: web
     name: vozila
     env: python
-    plan: free
-    buildCommand: pip install -r requirements.txt
+    plan: free    
+    buildCommand: chmod +x build.sh && ./build.sh
     startCommand: gunicorn --bind 0.0.0.0:$PORT source:app --workers 1 --threads 2 --timeout 300
     envVars:
       - key: PYTHON_VERSION
