--- a/render.yaml
+++ b/render.yaml
@@ -1,15 +1,13 @@
 # Render Deployment Configuration
 # This file is used by Render to deploy your application
 
-version: 1
-
 services:
   - type: web
     name: vozila
     env: python
-    plan: free    
-    buildCommand: chmod +x build.sh && ./build.sh
-    startCommand: gunicorn --bind 0.0.0.0:$PORT source:app --workers 1 --threads 2 --timeout 300
+    plan: free
+    buildCommand: pip install -r requirements.txt
+    startCommand: gunicorn --bind 0.0.0.0:$PORT app:app --workers 1 --threads 2 --timeout 300
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.4
