--- a/.gitignore
+++ b/.gitignore
@@ -145,6 +145,7 @@ MARKETING_GUIDE.md
 DEPLOYMENT_SUCCESS.md
 RENDER_DEPLOYMENT.md
 FREE_HOSTING_COMPARISON.md
+COOKIE_GUIDE.md
 *_GUIDE.md
 *_README.md
 readme.txt
